--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="bg-white">
         <div class="container-xl navbar-xl fixed-top bg-light bg-opacity-75 py-2">
             <div class="d-flex justify-content-between align-items-center">
-                <div data-aos="zoom-in-right" data-aos-duration="1500" data-aos-delay="100"><i class="fs-4 text-secondary fst-normal fw-semibold mx-3" >logo</i></div>
+                <div data-aos="zoom-in-up" data-aos-duration="1500" data-aos-delay="100"><i class="fs-4 text-secondary fst-normal fw-semibold mx-3" >logo</i></div>
                 <div class="align-items-center">
-                    <a href="#" class="fs-3 btn link-dark px-1 py-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100"><i class="bi-list"></i></a>
+                    <a href="#" class="fs-3 btn link-dark px-1 py-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><i class="bi-list"></i></a>
                     <a href="#" class="fs-3 btn link-primary px-1 py-0" data-aos="fade-down" data-aos-duration="1200" data-aos-delay="150"><i class="bi-facebook"></i></a>
                     <a href="#" class="fs-3 btn link-info px-1 py-0" data-aos="fade-down" data-aos-duration="1200" data-aos-delay="150"><i class="bi-twitter"></i></a>
-                    <a href="#" class="fs-3 btn link-danger px-1 py-0 me-3" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200"><i class="bi-instagram"></i></a>
+                    <a href="#" class="fs-3 btn link-danger px-1 py-0 me-3" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200"><i class="bi-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -28,11 +28,11 @@
     <div class="container-xl py-5">
         <div class="row align-items-center justify-content-center">
             <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-4 col-xxl-4 my-3">
-                <div class="display-5 text-success fw-bold my-2" data-aos="fade-down-right" data-aos-duration="1000" data-aos-delay="100">One-click solution for your static website</div>
-                <div class="d-flex text-gray small my-4" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a></div>
+                <div class="display-5 text-success fw-bold my-2" data-aos="fade-down-up" data-aos-duration="1000" data-aos-delay="100">One-click solution for your static website</div>
+                <div class="d-flex text-gray small my-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a></div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-10 d-flex my-3">
-                <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 me-4 px-1 py-2" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="200"><i class="bi-upload">&nbsp Upload for Free</i></a>
-                <a href="#" class="btn text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none my-3 px-1 py-2" data-aos="flip-right" data-aos-duration="1200" data-aos-delay="300"><i class="bi-youtube">&nbsp Watch Video</i></a>
+                <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 me-4 px-1 py-2" data-aos="flip-down" data-aos-duration="1200" data-aos-delay="200"><i class="bi-upload">&nbsp Upload for Free</i></a>
+                <a href="#" class="btn text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none my-3 px-1 py-2" data-aos="flip-up" data-aos-duration="1200" data-aos-delay="300"><i class="bi-youtube">&nbsp Watch Video</i></a>
             </div>
             </div>
             <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-5 my-3" data-aos="zoom-in-down" data-aos-duration="1200" data-aos-delay="200">
@@ -125,33 +125,33 @@
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center g-2 p-3 py-5">
-                    <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1" data-aos="fade-right" data-aos-duration="2500" data-aos-delay="200">
+                    <div class="col-10 col-sm-8 col-md-4 col-lg-4 col-xl-4 col-xxl-4 my-1" data-aos="fade-up" data-aos-duration="2500" data-aos-delay="200">
                         <div class="bg-success">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
-                                <div class="h6 text-light my-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="250">Starter Plan</div>
+                                <div class="small text-light my-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="250">Starter Plan</div>
                                 <div class="text-light display-4 fw-bold text-opacity-75 my-3" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="250">FREE</div>
-                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
+                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Upload for Free <i class="bi-arrow-up fw-bold"></i></a>
                                 <div class="text-light small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="350">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor.</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="100">
+                    <div class="col-10 col-sm-8 col-md-4 col-lg-4 col-xl-4 col-xxl-4 my-1" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="100">
                         <div class="bg-white">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
-                                <div class="row justify-content-between align-items-center">
-                                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 h6 text-success" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="150">Yearly Plan</div>
-                                    <div class=" col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 text-white small bg-warning btn rounded-5 px-2 py-0 me-3" data-aos="flip-right" data-aos-duration="2000" data-aos-delay="150">SAVE 25%</div>
+                                <div class="row justify-content-around align-items-center">
+                                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 small text-success" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="150">Yearly Plan</div>
+                                    <div class=" col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 text-white small bg-warning btn rounded-5 px-2 py-0 me-3 small" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="150">SAVE 25%</div>
                                 </div>
                                 <div class="d-flex align-items-center my-3" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="150">
                                     <div class="text-success display-4 fw-bold">$9</div>
                                     <div class="small fw-bold text-success mt-4">/month</div>
                                 </div>
-                                <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">Proceed Anually <i class="bi-arrow-right fw-bold"></i></a>
-                                <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet.</div>
+                                <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2 small" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">Proceed Anually <i class="bi-arrow-up fw-bold"></i></a>
+                                <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1" data-aos="fade-left" data-aos-duration="2500" data-aos-delay="200">
+                    <div class="col-10 col-sm-8 col-md-4 col-lg-4 col-xl-4 col-xxl-4 my-1" data-aos="fade-down" data-aos-duration="2500" data-aos-delay="200">
                         <div class="bg-white">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
                                 <div class="row justify-content-between align-items-center" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="250">
@@ -161,7 +161,7 @@
                                     <div class="text-success display-4 fw-bold">$12</div>
                                     <div class="small fw-bold text-success mt-4">/month</div>
                                 </div>
-                                <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Proceed Anually <i class="bi-arrow-right fw-bold"></i></a>
+                                <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Proceed Anually <i class="bi-arrow-up fw-bold"></i></a>
                                 <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="350">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem.</div>
                             </div>
                         </div>
@@ -174,17 +174,17 @@
     <div class="container-xl">
         <div class="bg-white my-5 py-5">
             <div class="row justify-content-center align-items-center">
-                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1 p-4" data-aos="fade-down-right" data-aos-duration="2000" data-aos-delay="100">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1 p-4" data-aos="fade-down-up" data-aos-duration="2000" data-aos-delay="100">
                     <img src="img/02.png" class="img-fluid">
                 </div>
-                <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 p-5" data-aos="fade-down-left" data-aos-duration="2000" data-aos-delay="200">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 p-5" data-aos="fade-down-down" data-aos-duration="2000" data-aos-delay="200">
                     <div class="display-5 text-success fw-bold mt-2 py-4" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">Get started with the simpliest static page</div>
                     <div class="d-flex text-gray small mb-4" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a>
                 </div>
                     <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none mb-5 me-2 px-1 py-2" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="300"><div class="bi-upload ">&nbsp Upload for Free</div></a>
             </div>
             <div class="row justify-content-center align-items-center">
-                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-up-right" data-aos-duration="2000" data-aos-delay="100">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="100">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
@@ -194,7 +194,7 @@
                     <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
                     <div class="small text-dark my-3">Chef Accountant</div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-down-right" data-aos-duration="2000" data-aos-delay="300">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
@@ -204,7 +204,7 @@
                     <div class="text-success h6 mt-4 mb-2">Celia Almeda</div>
                     <div class="small text-dark my-3">Secretary</div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-down-left" data-aos-duration="2000" data-aos-delay="300">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
@@ -214,7 +214,7 @@
                     <div class="text-success h6 mt-4 mb-2">Bob Roberts</div>
                     <div class="small text-dark my-3">Sales Manager</div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-up-left" data-aos-duration="2000" data-aos-delay="100">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
